# parallel_image_processor

./: .clang-format  .clang_format  CMakeLists.txt  README.md
include/: filters.h  image.h  threadpool.h
src/: engine.cpp  filters.cpp  image.cpp  main.cpp  threadpool.cpp
test/: CMakeLists.txt  gaussian_filter_test.cpp  grayscale_test.cpp  sobel_filter_test.cpp
